<resources>
    <string name="notify">Notify Wearable</string>
    <string name="hello_world">Hello world!</string>
    <string name="Policy_and_privacy">Policy and privacy</string>
    <string name="new_event">New event</string>
    <string name="places_remaining">Places remaining</string>
    <string-array name="event_type">
        <item>FaceToFace</item>
        <item>GroupEvent</item>
        <item>TourismTour</item>
    </string-array>
    <string name="Terms_and_agreement_of_service">Terms and agreement of service</string>
    <string name="Use_of_BIRDL">Android developer</string>
    <string name="event_prompt">Event type</string>
    <string name="user_name">User name</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="create_event">Create event</string>
    <string name="search_event">Search event</string>
    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string-array name="country_arrays">
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>
        <item>Italian</item>
        <item>German</item>
    </string-array>
    <string name="Privacy_policy">Christophe Crocheton &amp; Serkan Sahin</string>
    <string name="app_name">"Bird\'L"</string>
    <string name="title_activity_user">User</string>
    <string name="identify_fr">S\'identifier</string>
    <string name="email">E-mail</string>
    <string name="password_fr">Mot de passe</string>
    <string name="welcome_fr">Bienvenue</string>
    <string name="birdl_logo_string">Birdl_logo_string</string>
    <string name="birdl_logo_bird">birdl_logo_bird</string>
    <string name="connect_fr">Se connecter</string>
    <string name="logout_fr">Se déconnecter</string>
    <string name="save_text_fr">Sauvegarder E-mail/Mot de passe</string>
    <string name="password_in">Mot de passe</string>
    <string name="email_in">E-mail</string>
    <string name="savebox">New CheckBox</string>
    <string name="savebox_in">Garder ma session active</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="sign_up_sex_f">F</string>
    <string name="sign_up_sex_m">M</string>
    <string name="sign_up_en">Sign Up</string>
    <string name="sign_up_date">\"YYYY/MM/DD\"</string>
    <string name="sign_up_last_name">Nom</string>
    <string name="sign_up_first_name">Prénom</string>
    <string name="sign_up_ppwd">Password</string>
    <string name="sign_up_email">E-mail</string>
    <string name="sign_up_create">Create</string>
    <string name="sign_up_login">S\'inscrire</string>
    <string name="birdl_text">text logo</string>
    <string name="title_activity_confirmation">Confirmation</string>
    <string name="gender_select">Default \"M\" switch to select \"F\"</string>
    <string name="title_logo">title_logo</string>
    <string name="confirmation_msg">Un e-mail de confirmation vous a été envoyé pour activer votre compte Bird\'L :) !</string>
    <string name="button_back_home">Retour à l\'accueil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_2">email</string>
    <string name="pwd_2">password</string>
    <string name="gender_src">Genre (H/F)</string>
    <string name="land_butn">Pays</string>
    <string name="register_session">Enregistrer sa session</string>
    <string name="email_usr">Adresse mail</string>
    <string name="pass_usr">Mot de passe</string>
    <string name="othersign">Vous avez un compte Google+ ou Facebook ?</string>
    <string-array name="nav_drawer_labels">
        <item>@string/title_home</item>
        <item>@string/new_message</item>
        <item>@string/inbox</item>
        <item>@string/event</item>
        <item>@string/disconnect</item>
    </string-array>
    <string name="title_home">Home</string>
    <string name="new_message">Create message</string>
    <string name="inbox">Inbox</string>
    <string name="event">Event</string>
    <string name="disconnect">Disconnect</string>
    <string-array name="country_arrays_choices">
        <item>Non renseigné</item>
        <item>English</item>
        <item>French</item>
        <item>Spanish</item>
        <item>Italian</item>
        <item>German</item>
    </string-array>
    <string-array name="event_type_choices">
        <item>Non renseigné</item>
        <item>FaceToFace</item>
        <item>GroupEvent</item>
        <item>TourismTour</item>
    </string-array>
    <string name="get_notifier">Get notifications</string>
    <string name="application_language">Application language</string>
    <string name="submit_settings">SUBMIT</string>
    <string name="first_name_profile">First name</string>
    <string name="last_name_profile">Last name</string>
    <string name="birthdate_profile">Birth date</string>
    <string name="email_profile">E-mail</string>
    <string name="picture_profile">Picture</string>
    <string name="browse_picture">Browse</string>
    <string name="submit_profile">SUBMIT</string>
    <string name="action_about_birdl">About Bird\'l</string>
    <string name="action_settings">Settings</string>
    <string name="receiver_id">Destinataire</string>
    <string name="loading">Loading</string>
    <string name="signed_in_fmt">Signed :)</string>
    <string name="Sign_Out">Sign Out</string>
    <string name="signed_out">Signed Out :)</string>
    <string name="event_detail_button_sub">Subscribe</string>
    <string name="event_detail_button_unsub">Unsubscribe</string>
    <string-array name="country_names">
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Guatemala</item>
        <item>Guinea-Bissau</item>
        <item>Bangladesh</item>
        <item>Afghanistan</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burma</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Demo Rep of the Congo</item>
        <item>Congo</item>
        <item>Costa Rica</item>
        <item>Ivory Coast</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>East Timor</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Finland</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Guinea</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macedonia</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Moldova</item>
        <item>Mongolia</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Namibia</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North Korea</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Panama</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saudi Arabia</item>
        <item>Scotland</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Sierra Leone</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Togo</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Venezuela</item>
        <item>Viet Name</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
        <item>United States</item>
        <item>United Kingdom</item>
        <item>France</item>
        <item>Spain</item>
    </string-array>
</resources>