<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Login"
    android:id="@+id/mainview"
    android:background="@drawable/font">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/user_pwd"
        android:textColor="#A1A1A1"
        android:text="@string/password_in"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/user_email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/user_email"
        android:textColor="#A1A1A1"
        android:text="@string/email_in"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:id="@+id/imageView"
        android:contentDescription="@string/birdl_logo_string"
        android:background="@drawable/logo_birdl"
        android:layout_alignParentTop="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_fr"
        android:id="@+id/connect_button"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/user_pwd"
        android:layout_alignStart="@+id/user_pwd" />

    <ImageView
        android:layout_width="175dp"
        android:layout_height="65dp"
        android:id="@+id/imageView2"
        android:background="@drawable/text_logo"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignEnd="@+id/user_email"
        android:contentDescription="@string/birdl_text" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_login"
        android:id="@+id/sign_up"
        android:layout_alignTop="@+id/connect_button"
        android:layout_toEndOf="@+id/connect_button" />

</RelativeLayout>
