<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.birdl.birdl.SignUp">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/sign_up_email"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up_email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/sign_up_pwd"
        android:text="@string/sign_up_ppwd"
        android:layout_below="@+id/sign_up_email"
        android:layout_alignStart="@+id/sign_up_email"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_first_name"
        android:inputType="text"
        android:text="@string/sign_up_first_name"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/button_land"
        android:layout_alignStart="@+id/button_land" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_last_name"
        android:inputType="text"
        android:text="@string/sign_up_last_name"
        android:layout_alignTop="@+id/sign_up_first_name"
        android:layout_alignEnd="@+id/switch1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/sign_up_date"
        android:text="@string/sign_up_date"
        android:layout_alignBaseline="@+id/sign_up_confirm"
        android:layout_alignBottom="@+id/sign_up_confirm"
        android:layout_alignStart="@+id/sign_up_first_name" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_create"
        android:id="@+id/sign_up_confirm"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender_src"
        android:id="@+id/switch1"
        android:checked="false"
        android:layout_alignBottom="@+id/button_land"
        android:layout_alignEnd="@+id/sign_up_pwd" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pays"
        android:id="@+id/button_land"
        android:layout_marginTop="67dp"
        android:layout_below="@+id/sign_up_pwd"
        android:layout_alignStart="@+id/sign_up_pwd" />

</RelativeLayout>
